remove broken link from documentation

--- a/tclpkg/tcldot/tcldot.html
+++ b/tclpkg/tcldot/tcldot.html
@@ -5,9 +5,7 @@
 </head>
 <body>
 <h1> Tcl Dot API (tcldot)</h1>
-<p>(Tcl Dot also includes gdTcl for writing direct to a gif image.
-See: <a href=http://guraldi.hgp.med.umich.edu/gdtcl.html>gdTcl
-docs</a>.)
+<p>(Tcl Dot also pulls in Gdtclft for writing to a gif image.)
 <p><hr>
 Create a new graph.
 <pre>
