Enhanced macosx help page and imagepath test description

--- a/macosx/graphviz.help/graphviz.html
+++ b/macosx/graphviz.help/graphviz.html
@@ -8,13 +8,59 @@
 	<meta name="description" content="Graphviz FAQ" />
 	<meta name="KEYWORDS" content="discard,dispose,delete,clear,erase" />
 	<meta name="ROBOTS" content="NOINDEX" />
+<style type="text/css">
+/*
+** HTML elements
+*/
+.comment .links {
+  margin-bottom: 0;
+}
+/*
+** Page layout blocks / IDs
+*/
+#header, #content {
+  width: 100%;
+}
+#header {
+  background-color: #69c;
+}
+.site-name {
+color: #fff;
+}
+.image{
+	border: 1px solid #69c;
+}
+.containingbox{
+			width: 600px;
+			height: 150px;
+			border: 0px solid #000;
+}
+
+</style>
 	</head>
 	<body>
-	<h1>Graphviz Help</h1>
-	<ul>
-	<li><a href="http://graphviz.org/About.php">About Graphviz</a></li>
-	<li><a href="http://graphviz.org/content/faq">Graphviz FAQ</a></li>
-	</ul>
+	<div id="header">
+	     <a  href="/" title="Home"><img class="image" src="http://www.graphviz.org/app.png" alt="Home" /></a><h1 class='site-name'>Graphviz - Graph Visualization Software</h1> 
+	</div>
+	<h2>Graphviz Help</h2>
+	<div class="containingbox">
+	Graph Visualization</b>
+	Graph visualization is a way of representing structural information as diagrams of abstract graphs and networks. It has important applications in networking, 
+	bioinformatics,  software engineering, database and web design, machine learning, and in visual interfaces for other technical domains.  
+	More information on Graphviz is available here - <a href="http://graphviz.org/About.php" target="_blank" >About Graphviz</a></div>
+	</div>
+	<div class="containingbox">
+	Graphviz.app is a viewer that displays graphs written in the graphviz dot language.
+	It is not an editor, but it does permit the setting of various graphviz attributes.  More information about 
+	graphviz attributes is available here - <a href="http://www.graphviz.org/content/attrs" target="_blank" >Node, Edge and Graph Attributes</a></div>
+	</div>
+	<div class="containingbox">
+	Additional help with Graphviz can be found here - <a href="http://graphviz.org/content/faq" target="_blank" >Graphviz FAQ</a></div>
+	</div>
+<tr>
+    <td id="logo">
+    </td>
+	</tr>
 	</body>
 	</html>
 
