Added blurb about the layout attribute

--- a/macosx/graphviz.help/graphviz.html
+++ b/macosx/graphviz.help/graphviz.html
@@ -51,7 +51,7 @@ color: #fff;
 	</div>
 	<div class="containingbox">
 	Graphviz.app is a viewer that displays graphs written in the graphviz dot language.
-	It is not an editor, but it does permit the setting of various graphviz attributes.  More information about 
+	It is not an editor, but it does permit the setting of various graphviz attributes.  In particular, the layout attribute which defaults to dot, can be set. More information about 
 	graphviz attributes is available here - <a href="http://www.graphviz.org/content/attrs" target="_blank" >Node, Edge and Graph Attributes</a></div>
 	</div>
 	<div class="containingbox">
