Added instructions for using neato layout

--- a/macosx/graphviz.help/graphviz.html
+++ b/macosx/graphviz.help/graphviz.html
@@ -32,7 +32,7 @@ color: #fff;
 }
 .containingbox{
 			width: 600px;
-			height: 150px;
+			height: 200px;
 			border: 0px solid #000;
 }
 
@@ -50,7 +50,7 @@ color: #fff;
 	</div>
 	<div class="containingbox">
 	Graphviz.app is a viewer that displays graphs written in the graphviz dot language.
-	It is not an editor, but it does permit the setting of various graphviz attributes.  In particular, the layout attribute which defaults to dot, can be set. More information about 
+	It is not an editor, but it does permit the setting of various graphviz attributes.  In particular, the layout attribute which defaults to dot, can be set. As an example, to change the layout to neato, select the Attributes button in the upper left corner of the Graphviz.app window.  Scroll down to the layout attribute and type 'neato' into the associated text field. The layout change takes affect after the return key is pressed.  More information about 
 	graphviz attributes is available here - <a href="http://www.graphviz.org/content/attrs" target="_blank" >Node, Edge and Graph Attributes</a></div>
 	</div>
 	<div class="containingbox">
