--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <title>Graphviz by ErwinJanssen</title>
+    <title>Graphviz - Graph Visualization Tools</title>
   </head>
 
   <body>
